Change of html files

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -20,11 +20,11 @@
     <!-- Meni -->
 
     <header id="header">
-        <a id="logotip" href="what-we-do.html"><img class="logo" src="Logo/logoCrveni.svg"></a>
+        <a id="logotip" href="index.html"><img class="logo" src="Logo/logoCrveni.svg"></a>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
-                <li><a class="hover" href="what-we-do.html">WHAT WE DO</a></li>
+                <li><a class="hover" href="index.html">WHAT WE DO</a></li>
                 <li><a class="hover" href="who-we-are.html">WHO WE ARE</a></li>
             </ul>
         </nav>
