HTML changes. Added favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="icon" href="Ikonice/favico.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <title>3Dream - 3D Animation and Product Visualization Studio</title>
 </head>
@@ -154,7 +155,7 @@
         <div class="separator"></div>
 
         <div class="copyContainer">
-            <p class="copyright">Copyright &copy; 2019 3Dream</p>
+            <p class="copyright">Copyright &copy; 2021 3Dream</p>
         </div>
 
     </footer>
