--- a/who-we-are.html
+++ b/who-we-are.html
@@ -9,7 +9,8 @@
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="lightbox.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="icon" href="Ikonice/favico.png" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <script src="lightbox.js"></script>
     <title>3Dream - About Us</title>
@@ -171,7 +172,7 @@
         <div class="separator"></div>
 
         <div class="copyContainer">
-            <p class="copyright">Copyright &copy; 2019 3Dream</p>
+            <p class="copyright">Copyright &copy; 2021 3Dream</p>
         </div>
 
     </footer>
